[gd_scene load_steps=10 format=3 uid="uid://b4rp6pxc4q1id"]

[ext_resource type="Script" path="res://scenes/menu/score_screen.gd" id="1_2hart"]
[ext_resource type="Texture2D" uid="uid://bbpvygt5k2x22" path="res://_art_resources/score_screen.png" id="1_2hw76"]
[ext_resource type="FontFile" uid="uid://dtawjt8k8ebw2" path="res://assets/fonts/XTypewriter-Regular.ttf" id="2_b37mf"]
[ext_resource type="FontFile" uid="uid://rryu1vtgpt82" path="res://assets/fonts/XTypewriter-Bold.ttf" id="3_1m6nb"]
[ext_resource type="Texture2D" uid="uid://c6uxwmeiwvpmy" path="res://_art_resources/disket.png" id="4_b6tbs"]
[ext_resource type="Texture2D" uid="uid://cp8owk5d2jdol" path="res://_art_resources/irradiate_tile_icon.png" id="5_bgxdr"]
[ext_resource type="Texture2D" uid="uid://4kwewvvnpmfq" path="res://_art_resources/time_icon.png" id="6_vp13i"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nwb0v"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_butbx"]
light_mode = 1

[node name="ScoreScreen" type="Node2D"]
material = SubResource("CanvasItemMaterial_nwb0v")
position = Vector2(0, -2)
script = ExtResource("1_2hart")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -297.5
offset_right = 576.0
offset_bottom = 297.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_2hw76")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -214.0
offset_top = -187.0
offset_right = 227.0
offset_bottom = -126.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]FIN DU NIVEAU[/center]"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -167.0
offset_top = -117.0
offset_right = -10.0
offset_bottom = -77.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "DISKETS"
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -213.0
offset_top = -115.0
offset_right = -180.0
offset_bottom = -81.0
texture = ExtResource("4_b6tbs")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -213.0
offset_top = -52.0
offset_right = -179.0
offset_bottom = -17.0
texture = ExtResource("5_bgxdr")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -167.0
offset_top = -55.0
offset_right = 46.0
offset_bottom = -15.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "PLATEFORMES"
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -213.0
offset_top = 13.0
offset_right = -179.0
offset_bottom = 48.0
texture = ExtResource("6_vp13i")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TotalScore" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = 13.0
offset_top = 146.0
offset_right = 226.0
offset_bottom = 187.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 35
text = "1234"
fit_content = true
scroll_active = false

[node name="Total_Label" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -211.0
offset_top = 145.0
offset_right = 2.0
offset_bottom = 186.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 35
text = "TOTAL"
fit_content = true
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -167.0
offset_top = 10.0
offset_right = 46.0
offset_bottom = 50.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "TEMPS"
metadata/_edit_use_anchors_ = true

[node name="TilesScore" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = 93.0
offset_top = -54.0
offset_right = 211.0
offset_bottom = -14.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "21/23"
metadata/_edit_use_anchors_ = true

[node name="TimeScore" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = 91.0
offset_top = 10.0
offset_right = 231.0
offset_bottom = 50.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "00:12"
metadata/_edit_use_anchors_ = true

[node name="DisketScore" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = 95.0
offset_top = -116.0
offset_right = 235.0
offset_bottom = -76.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "2"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = 33.0
offset_top = -54.0
offset_right = 90.0
offset_bottom = -14.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "..."
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel10" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -38.0
offset_top = -114.0
offset_right = 91.0
offset_bottom = -77.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "......."
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel11" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -74.0
offset_top = 10.0
offset_right = 96.0
offset_bottom = 54.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "........."
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel12" type="RichTextLabel" parent="."]
material = SubResource("CanvasItemMaterial_butbx")
offset_left = -102.0
offset_top = 149.0
offset_right = 33.0
offset_bottom = 193.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_b37mf")
theme_override_fonts/bold_font = ExtResource("3_1m6nb")
theme_override_font_sizes/normal_font_size = 30
text = "......"
fit_content = true
scroll_active = false

[node name="NextButton" type="Button" parent="."]
offset_left = 38.0
offset_top = 220.0
offset_right = 220.0
offset_bottom = 253.0
theme_override_colors/font_color = Color(0, 0.439216, 0, 1)
theme_override_fonts/font = ExtResource("2_b37mf")
theme_override_font_sizes/font_size = 21
text = "Niveau suivant"
flat = true

[node name="RestartButton" type="Button" parent="."]
offset_left = -215.0
offset_top = 220.0
offset_right = -75.0
offset_bottom = 253.0
theme_override_colors/font_color = Color(0, 0.439216, 0, 1)
theme_override_fonts/font = ExtResource("2_b37mf")
theme_override_font_sizes/font_size = 21
text = "Recommencer"
flat = true
